# MicroPython-SHTC3

./: .pylintrc  Makefile  README.rst  pyproject.toml  requirements.txt
examples/: shtc3_simpletest.py
shtc3/: __init__.py  shtc3.py
